some quick fixes

--- a/config.pup.json
+++ b/config.pup.json
@@ -3,7 +3,7 @@
       "owner" : "claudiobagnatogiuseppe@gmail.com",
       "screenshots" : "./Desktop/screenshots",
       "search": {
-        "keywords": "backend OR frontend OR java OR JAVASCRIPT",
+        "keywords": "cuoco and ( aiuto or support ) and not alberghiero and not richiesta",
         "location": "milano"
       },
       "baseJobEngine" : "https://it.indeed.com/m",
