--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "homepage": "https://github.com/cercatore/puppeteer-indeed#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "nodemailer": "^6.1.1"
+    "delay": "^4.2.0",
+    "nodemailer": "^6.1.1",
+    "puppeteer": "^1.16.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
